separate/apps/service_echo/base/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
