separate/apps/service_echo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-echo
  template:
    metadata:
      labels:
        app: service-echo
    spec:
      containers:
      - name: echo-container
        image: hashicorp/http-echo
        args: ["-listen=:8080", "-text=hello world from echo service"]
        ports:
        - containerPort: 8080
